--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
                         <img src="image/photo-anesu.jpg" width="170" alt="photo cv anesu"/>
                     </div><br>
                     <div class="info">
-                        <p><strong>Anesu Safran--Zimonte</strong><br/>
-                        25 juin 2005</p>
+                        <h1>ANESU SAFRAN--ZIMONTE</h1>
+                        <p><strong>Date de naissance</strong><br/>
+                        né le 25 juin 2005</p>
                         <p><strong>Adresse</strong><br/>
                         Rue des Roses - 49240 Avrillé</p>
                         <p><strong> Téléphone</strong><br/>
